# dns-server

./: DnsServer.sln  Makefile  README.md
Portare.Core/Models/: Record.cs  RecordClass.cs  RecordSet.cs  RecordType.cs  Zone.cs
Portare.Core/Protos/: data_zone.proto
Portare.Data/: Portare.Data.csproj  Program.cs  appsettings.json
Portare.Data/DAL/: DataContext.cs
Portare.Data/Entities/: RecordEntity.cs  RecordSetEntity.cs  ZoneEntity.cs
Portare.Data/Extensions/: AppExtensions.cs
Portare.Data/Grpc/: DataZoneService.cs
Portare.Data/Properties/: launchSettings.json
Portare.Data/Repositories/: RecordRepository.cs  RecordSetRepository.cs  Repository.cs  ZoneRepository.cs
Portare.Resolver/: Portare.Resolver.csproj  Program.cs  UdpResolver.cs  appsettings.json
Portare.Resolver/Extensions/: AppExtensions.cs
Portare.Resolver/Packets/: DnsAnswer.cs  DnsHeader.cs  DnsPacket.cs  DnsQuestion.cs  ResponseCode.cs
Portare.Resolver/Properties/: launchSettings.json
Portare.Web/: Portare.Web.csproj  Program.cs  appsettings.json  zones.http
Portare.Web/Endpoints/: ZoneEndpoints.cs
Portare.Web/Extensions/: AppExtensions.cs
Portare.Web/Models/: Record.cs  RecordClass.cs  RecordRequest.cs  RecordSet.cs  RecordSetRequest.cs  RecordType.cs  Zone.cs  ZoneRequest.cs
Portare.Web/Properties/: launchSettings.json
Server/: Program.cs  Server.http  UdpServer.cs
Server/Packets/: DnsPacket.cs
proto/: data_zone.proto
resolver/: Cargo.toml  build.rs
resolver/src/: dns_packet.rs  lib.rs  main.rs  resolver.rs  udp_server.rs  zone.rs
(+4 files in other folders)
